frontend/tests/cases/negative/interfaces/scope/notInScopeInterfaceAsConstraintToInterface.gr
-- we attempt to use 'Simple1' as a constraint,
-- but it is not in scope
interface {Simple1 a} => Simple2 a
